<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/mSlideUpLayoutMedia"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen64dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/mMusicLogoMini"
            android:layout_width="@dimen/dimen40dp"
            android:layout_gravity="center_vertical"
            android:layout_height="@dimen/dimen40dp"
            android:layout_margin="@dimen/dimen12dp"
            android:src="@drawable/ic_musicnode" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/mMusicName"
                android:layout_width="@dimen/dimenNameSongPlay"
                android:layout_height="@dimen/dimen25dp"
                android:layout_marginTop="@dimen/dimen7dp"
                android:gravity="left"
                android:textColor="@color/black"
                android:text="@string/unknow_song"
                android:textSize="@dimen/mPlayMusicName_textsize"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/mAlbumName"
                android:layout_width="@dimen/dimenNameAlbumnPlay"
                android:layout_height="@dimen/dimen25dp"
                android:layout_below="@id/mMusicName"
                android:layout_alignStart="@id/mMusicName"
                android:layout_marginBottom="@dimen/dimen7dp"
                android:gravity="left"
                android:textSize="@dimen/dimen15sp"
                android:text="@string/unknow_albumn"
                tools:ignore="RtlHardcoded" />

            <ImageButton
                android:id="@+id/mBtnBack"
                android:layout_width="@dimen/dimen25dp"
                android:layout_height="@dimen/dimen40dp"
                android:layout_toRightOf="@id/mAlbumName"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dimen10dp"
                android:background="@null"
                android:src="@drawable/ic_list_music" />
            <ImageButton
                android:id="@+id/mBtnMore"
                android:layout_width="@dimen/dimen25dp"
                android:layout_height="@dimen/dimen40dp"
                android:layout_toRightOf="@id/mBtnBack"
                android:layout_marginLeft="@dimen/dimen10dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dimen10dp"
                android:background="@null"
                android:src="@drawable/ic_more_vertical" />

        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ImageMusic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/mSlideUpLayoutMedia"
        android:layout_marginTop="1dp">

        <ImageView
            android:id="@+id/mImgLogoBig"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#72C63D"
            android:src="@drawable/ic_musicnode" />

        <ImageButton
            android:id="@+id/mBtnRepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/dimen37dp"
            android:layout_marginBottom="@dimen/dimen155dp"
            android:background="@null"
            android:src="@drawable/ic_repeat"
            tools:ignore="NotSibling" />

        <ImageButton
            android:id="@+id/mBtnShuffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dimen155dp"
            android:layout_marginRight="@dimen/dimen37dp"
            android:background="@null"
            android:src="@drawable/ic_shuffle"
            tools:ignore="NotSibling" />

        <SeekBar
            android:id="@+id/mSbMusicDuration"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dimen117dp"
            android:progressTint="@color/orange"
            android:thumbTint="@color/orange" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/TimePlay"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dimen84dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/mTxtTimeProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen8dp"
                android:text="@string/time_0_00" />

            <TextView
                android:id="@+id/mTxtTimeEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/dimen8dp"
                android:text="@string/time_0_00" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dimen24dp"
            >

            <ImageButton
                android:id="@+id/mBtnLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dimen26dp"
                android:background="@null"
                android:src="@drawable/ic_like" />

            <ImageButton
                android:id="@+id/mBtnPrevious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dimen43dp"
                android:layout_toEndOf="@id/mBtnLike"
                android:background="@null"
                android:src="@drawable/ic_previous" />

            <ImageButton
                android:id="@+id/mBtnPlayBig"
                android:layout_width="@dimen/dimen111dp"
                android:layout_height="@dimen/dimen60dp"
                android:layout_centerInParent="true"
                android:background="@null"
                android:src="@drawable/ic_pause_circle" />

            <ImageButton
                android:id="@+id/mBtnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dimen43dp"
                android:layout_toStartOf="@id/mBtnDislike"
                android:background="@null"
                android:src="@drawable/ic_next" />

            <ImageButton
                android:id="@+id/mBtnDislike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dimen26dp"
                android:background="@null"
                android:src="@drawable/ic_dislike" />
        </RelativeLayout>
    </RelativeLayout>



</RelativeLayout>